Beginning of changes for 1P review